--- a/tools.html
+++ b/tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voltage Dev Docs - Overview</title>
+    <title>Voltage Dev Docs - Tools</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -50,9 +50,9 @@
     </nav>
 
   <div class="container-fluid">
-    <h1 class="mt-4">Overview</h1>
+    <h1 class="mt-4">Tools</h1>
     <hr>
-    <p>Welcome to the Voltage Dev Docs. Here you will find useful information about the Voltage code standards and QA processes. These dev docs will grow naturally over time as more processes are being implimented.</p>
+    <p>Tools.</p>
   </div>
 
   <footer class="p-4 mt-5 bg-light border-top">
